--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css?family=Atkinson+Hyperlegible:400');
-
 html {font-size: 100%;} /*16px*/
 
 
@@ -42,20 +40,37 @@ html {font-size: 100%;} /*16px*/
 *{
   font-family:'Atkinson Hyperlegible', sans-serif; ;
 }
-h1 , h2{
-    margin-left: 20px;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-    font-weight: bold;
-    font-size: 32px;
+
+
+.datosobras{
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 18px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-color: #3B2C21;
+  border-style: solid;
+  border-width: 2px;
+  border-left: none;
+  border-right: none;
 }
 
-p {
- font-size:20px;
- text-align: left;
- margin-left: 20px;
- margin-right: 20px;
- font-family: 'Atkinson Hyperlegible', sans-serif;
+.tituloObra{
+  font-size: 32px;
+  font-weight: 700;
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
+.descripcionObra{
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
 
 
 
@@ -118,20 +133,6 @@ p {
   color: #ffffff;
 }
 
-.datos {
- margin-left: 10px;
- padding: 10px;
- font-family: 'Atkinson Hyperlegible', sans-serif;
-
-}
-h1{
-    font-weight: bold;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-    font-size: 2em;
-    margin-left: 20px;
-}
-
-
 
 * {
     margin: 0;
@@ -157,23 +158,7 @@ h1{
     justify-content: center;
 
 }
-  .ubicarb{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    height: 80px;
-    width: auto;
-    background-color: gray;
-    border-radius: 8px 8px;
-    border-color: #3B2C21;
-    margin: 20px;
-  }
-  .ubicar{
-    color: #ffffff;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-    font-weight: bold;
-    text-align: center;
-  }
+
 
   .linkb{   
     display: flex;
@@ -196,6 +181,8 @@ h1{
 .obrasSimilares{
   font-family: 'Atkinson Hyperlegible', sans-serif;
   font-size: 1em;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 
@@ -220,6 +207,9 @@ h1{
   align-items: center;
   margin-top: 5px;
   }
+.tituloopaudio .rtraudio{
+  padding-left: 10px;
+}
 .playpausa{
   display: flex;
   flex-direction: row;
@@ -272,6 +262,9 @@ h1{
   font-size: 1.25em;
   font-weight: 600;
   letter-spacing: 0.02em;
+}
+.rtropvelocidad{
+  padding: 10px;
 }
 
 .contenedordeVoz{
@@ -466,10 +459,10 @@ h1{
   color: #ffffff;
   margin-bottom: 5px;
 }
-.textotitulo .flecharetroceso{
+.textotitulo .rtrtexto{
   justify-content: center;
   align-items: center;
-  padding-left: 20px;
+  padding-left: 10px;
 
 }
 
@@ -488,7 +481,6 @@ h1{
   border-radius: 8px;
   margin-left: 20px;
   margin-right: 20px;
-
 }
 .cajaoptexto .textoopcion2{
   display: flex;
@@ -536,11 +528,11 @@ h1{
   color: #ffffff;
   background-color: #3B2C21;
 }
-.contrastetitulo .flecharetroceso{
+.contrastetitulo .rtrcontraste{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 .cajaopcontraste .contrasteopcion1{
     display: flex;
@@ -590,7 +582,7 @@ h1{
   color: #ffffff;
   background-color: #3B2C21;
 }
-.tamanotitulo .flecharetroceso{
+.tamanotitulo .rtrtamano{
   display: flex;
   justify-content:center;
   align-items: center;
@@ -643,7 +635,7 @@ h1{
 }
 .txt-up{
   color: #ffffff;
-  font-weight: 400;  
+  font-weight: 700;  
   font-size: 1em;
   padding-left: 5px;
 }
