--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 html {font-size: 100%;} /*16px*/
 
 .botonesaudio1-0{
-  background-color: #3B2C21;
+  background-color: #003C2E;
 }
 .menunaveg{
-    background-color: #3B2C21;
+    background-color: #003C2E;
     display: flex;
     flex-direction: row;
     gap: 90%;
@@ -22,7 +22,7 @@ html {font-size: 100%;} /*16px*/
 }
 
 .menuresponsive {
-    background-color: #3B2C21;
+    background-color: #003C2E;
     list-style: none;
     height: 70px;
     width: 100%;
@@ -51,7 +51,7 @@ html {font-size: 100%;} /*16px*/
   margin-bottom: 20px;
   padding-bottom: 20px;
   padding-top: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   border-width: 2px;
   border-left: none;
@@ -89,7 +89,7 @@ html {font-size: 100%;} /*16px*/
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   height: 50px;
   width: 100px;
   margin-top: 10px;
@@ -113,7 +113,7 @@ html {font-size: 100%;} /*16px*/
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   height: 50px;
   width: 100px;
   margin-top: 10px;
@@ -168,7 +168,7 @@ html {font-size: 100%;} /*16px*/
     width: auto;
     background-color: gray;
     border-radius: 8px 8px;
-    border-color: #3B2C21;
+    border-color: #003C2E;
     margin: 20px;
   }
   .linka{
@@ -185,17 +185,16 @@ html {font-size: 100%;} /*16px*/
   padding-right: 20px;
 }
 
-
-  .opaudio {
+ .opaudio {
     display: flex;
     flex-direction:column;
     height: 240px;
     width: auto;
-    border: #3B2C21;
+    border: #003C2E;
     border-style:solid;
     border-radius: 8px 8px;
     font-family: 'Atkinson Hyperlegible', sans-serif;
-    background-color: #3B2C21;
+    background-color: #003C2E;
     margin: 0 20px 0 20px;
   }
 .tituloopaudio{
@@ -296,15 +295,15 @@ html {font-size: 100%;} /*16px*/
 .cajaopvelocidad{
   display: flex;
   flex-direction: column;
-  color: #3B2C21;
+  color: #003C2E;
   margin-left: 20px;
   margin-right: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   height: 240px;
   width: auto;
   border-radius: 8px;
-  background-color: #FFE4CB;
+  background-color: #ffffff;
   margin-left: 30px;
   margin-right: 30px;
 }
@@ -324,7 +323,7 @@ html {font-size: 100%;} /*16px*/
   width: auto;
   height: 40px;
   color: #ffffff;
-  background-color: #3B2C21;
+  background-color: #003C2E;
 }
 .cajaopvelocidad .velocidadopcion1{
   display: flex;
@@ -343,7 +342,7 @@ html {font-size: 100%;} /*16px*/
   font-family: 'Atkinson Hyperlegible', sans-serif;
   width: auto;
   height: 67px;
-  border-top: #3B2C21;
+  border-top: #003C2E;
   border-top-style: solid;
   border-top-width: 0.05em;
 }
@@ -355,7 +354,7 @@ html {font-size: 100%;} /*16px*/
   font-family: 'Atkinson Hyperlegible', sans-serif;
   width: auto;
   height: 67px;
-  border-top: #3B2C21;
+  border-top: #003C2E;
   border-top-style: solid;
   border-top-width: 0.05em;
 }
@@ -365,7 +364,7 @@ html {font-size: 100%;} /*16px*/
   flex-direction: column;
   margin-left: 20px;
   margin-right: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   height: 240px;
   width: auto;
@@ -376,11 +375,10 @@ html {font-size: 100%;} /*16px*/
   padding-left: 20px;
 }
 .cajaopvoz .voztitulo{
-  background-color: #3B2C21;
+  background-color: #003C2E;
   display: flex;
   flex-direction: row;
   row-gap: 10px;
-  background-color: #3B2C21;
   justify-content: center;
   align-items: center;
   color: #ffffff;
@@ -393,7 +391,7 @@ html {font-size: 100%;} /*16px*/
   justify-content: center;
   align-items: center;
   height: 67px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   border-width: 2px;
   border-top: none;
@@ -406,7 +404,7 @@ html {font-size: 100%;} /*16px*/
   justify-content: center;
   align-items: center;
   height: 67px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   border-width: 2px;
   border-top: none;
@@ -427,10 +425,10 @@ html {font-size: 100%;} /*16px*/
 .cajaoptexto{
   display: flex;
   flex-direction: column;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   margin-left: 20px;
   margin-right: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   height: 170px;
   width: auto;
@@ -451,7 +449,6 @@ html {font-size: 100%;} /*16px*/
   justify-content: center;
   align-items: center;
   padding-left: 10px;
-
 }
 
 .cajaoptexto .textoopcion1{
@@ -479,7 +476,6 @@ html {font-size: 100%;} /*16px*/
   font-weight: bold;
   width: auto;
   height: 40px;
-  color: #ffffff;
   border-style: solid;
   border-color: #ffffff;
   border-radius: 8px;
@@ -494,15 +490,15 @@ html {font-size: 100%;} /*16px*/
 .cajaopcontraste{
   display: flex;
   flex-direction: column;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   margin-left: 20px;
   margin-right: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   height: 173px;
   width: auto;
   border-radius: 8px;
-  background-color: #FFE4CB;
+  background-color: #ffffff;
 }
 .cajaopcontraste .contrastetitulo{
   display: flex;
@@ -514,7 +510,7 @@ html {font-size: 100%;} /*16px*/
   width: auto;
   height: 40px;
   color: #ffffff;
-  background-color: #3B2C21;
+  background-color: #003C2E;
 }
 .contrastetitulo .rtrcontraste{
   display: flex;
@@ -540,23 +536,29 @@ html {font-size: 100%;} /*16px*/
   font-family: 'Atkinson Hyperlegible', sans-serif;
   width: auto;
   height: 67px;
-  border-top: #3B2C21;
+  border-top: #003C2E;
   border-top-style: solid;
   border-top-width: 0.05em;
+}
+.linkcontraste{
+  appearance: none;
+  -webkit-appearance: none;
+  text-decoration: none;
+  color:#003C2E;
 }
 
 .cajaoptamano{
   display: flex;
   flex-direction: column;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   margin-left: 20px;
   margin-right: 20px;
-  border-color: #3B2C21;
+  border-color: #003C2E;
   border-style: solid;
   height: 240px;
   width: auto;
   border-radius: 8px;
-  background-color: #FFE4CB;
+  background-color: #ffffff;
 }
 .cajaoptamano .tamanotitulo{
   display: flex;
@@ -568,7 +570,7 @@ html {font-size: 100%;} /*16px*/
   width: auto;
   height: 40px;
   color: #ffffff;
-  background-color: #3B2C21;
+  background-color: #003C2E;
 }
 .tamanotitulo .rtrtamano{
   display: flex;
@@ -594,7 +596,7 @@ html {font-size: 100%;} /*16px*/
   font-family: 'Atkinson Hyperlegible', sans-serif;
   width: auto;
   height: 67px;
-  border-top: #3B2C21;
+  border-top: #003C2E;
   border-top-style: solid;
   border-top-width: 0.05em;
 }
