--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ html {font-size: 100%;} /*16px*/
   border-width: 2px;
   border-left: none;
   border-right: none;
+  color: #003C2E;
 }
 
 .tituloObra{
@@ -65,12 +66,14 @@ html {font-size: 100%;} /*16px*/
   margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  color: #003C2E;
 }
 .descripcionObra{
   margin-left: 20px;
   margin-right: 20px;
   font-size: 20px;
   margin-bottom: 30px;
+  color:#003C2E
 }
 
 
@@ -166,13 +169,13 @@ html {font-size: 100%;} /*16px*/
     padding: 20px;
     height: 100%;
     width: auto;
-    background-color: gray;
+    border-style: solid;
     border-radius: 8px 8px;
-    border-color: #003C2E;
+    border-color: #B33232;
     margin: 20px;
   }
   .linka{
-    color: #ffffff;
+    color: #B33232;;
     font-family: 'Atkinson Hyperlegible', sans-serif;
     font-weight: bold;
     text-align: center;
@@ -617,7 +620,7 @@ html {font-size: 100%;} /*16px*/
   flex-direction: row;
   height: 50px;
   width: auto;
-  background-color: #3B2C21;
+  background-color: #003C2E;
   border-radius: 8px;
   margin: 30px 20px 10px 20px;
   justify-content: center;
@@ -645,6 +648,7 @@ html {font-size: 100%;} /*16px*/
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
+
 }
 
 .carousel__track {
@@ -688,8 +692,6 @@ html {font-size: 100%;} /*16px*/
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
   background-color: #3B2C21;
 }
 .texto1, .texto2, .texto3,  .texto4 {
